examples/test/testpolicy4887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4887
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key31: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value35
          key40: value33
          key14: value13
      podSelector:
        matchLabels:
          key40: value32
          key2: value18
          key25: value27
